[package]
name = "agera"
version = "0.1.0"
edition = "2021"
authors = ["hydroper <matheusdiasdesouzads@gmail.com>"]
repository = "https://github.com/agera-sdk/agera"
license = "MIT OR Apache-2.0"
description = "Agera SDK API"
keywords = ["sdk"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
