[package]
name = "agera"
version = "0.1.5"
edition = "2021"
authors = ["hydroper <matheusdiasdesouzads@gmail.com>"]
repository = "https://github.com/agera-sdk/agera"
license = "MIT OR Apache-2.0"
description = "Agera SDK API"
keywords = ["sdk", "multi-media", "display", "ui"]
categories = ["multimedia"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
by_address = "1.1.0"
bytes = { version = "1.4.0", features = ["serde"] }
cfg-if = "1.0.0"
chrono = "0.4.31"
dirs = "5.0.1"
file_paths = "1.0.0"
futures = "0.3.28"
late_format = "1.0.0"
lazy-regex = "3.0.1"
maplit = "1.0.2"
once_cell = "1.18.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.107"

# Dependencies for native targets
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.29.1", features = ["full", "macros", "time", "rt"] }

# Dependencies for Android
[target.'cfg(target_os = "android")'.dependencies]
android-activity = { version = "0.5.0", features = ["native-activity"] }
jni = "0.21.1"

# Dependencies for the browser
[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = { version = "0.3.64" }
# web-sys = { version = "0.3.64", features = ["AbortController", "Navigator", "StorageManager", "Window", "FileSystemHandle", "FileSystemFileHandle", "FileSystemDirectoryHandle", "Blob", "File"] }
wasm-bindgen = { version = "0.2.87" }
wasm-bindgen-futures = { version = "0.4.37" }