[package]
name = "agera_sdk_application_descriptor"
version = "0.1.0"
edition = "2021"
authors = ["hydroper <matheusdiasdesouzads@gmail.com>"]
repository = "https://github.com/agera-sdk/agera"
license = "MIT OR Apache-2.0"
description = "Agera SDK application descriptor parser and validator"
keywords = ["sdk"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
file_paths = "1.0.0"
glob = "0.3.1"
lazy-regex = "3.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.107"
