[package]
name = "agera_sdk_build"
version = "0.1.0"
edition = "2021"
authors = ["hydroper <matheusdiasdesouzads@gmail.com>"]
repository = "https://github.com/agera-sdk/agera"
license = "MIT OR Apache-2.0"
description = "Agera SDK build bootstrap"
keywords = ["sdk"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
agera_sdk_application_descriptor = { path = "../agera_sdk_application_descriptor" }
late_format = "1.0.0"
maplit = "1.0.2"