[package]
name = "agera_sdk_proc"
version = "0.1.1"
edition = "2021"
authors = ["hydroper <matheusdiasdesouzads@gmail.com>"]
repository = "https://github.com/agera-sdk/agera"
license = "MIT OR Apache-2.0"
description = "Agera SDK API procedural macros"
keywords = ["sdk"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1", features = ["nightly"] }
quote = "1"
syn = { version = "2.0.38", features = ["full"] }