[package]
name = "purplelight"
version = "0.1.0"
edition = "2021"
authors = ["hydroper <matheusdiasdesouzads@gmail.com>"]
repository = "https://github.com/purplelight-tech/purplelight"
license = "MIT OR Apache-2.0"
description = "Purplelight SDK API"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = { version = "1.4.0", features = ["serde"] }
file_paths = "0.1.2"
futures = "0.3.28"
regex = "1.10.0"