[package]
name = "agera_core"
version = "0.1.0"
edition = "2021"
authors = ["hydroper <matheusdiasdesouzads@gmail.com>"]
repository = "https://github.com/agera-tech/agera"
license = "MIT OR Apache-2.0"
description = "Agera API"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
agera_lang = { path = "../agera_lang" }
bevy = "0.11.2"