[package]
name = "agera_lang"
version = "0.1.0"
edition = "2021"
authors = ["hydroper <matheusdiasdesouzads@gmail.com>"]
repository = "https://github.com/agera-tech/agera"
license = "MIT OR Apache-2.0"
description = "Agera API"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = { version = "1.4.0", features = ["serde"] }
futures = "0.3.28"
lazy-regex = "3.0.1"
maplit = "1.0.2"
serde = { version = "1.0.175", features = ["derive"] }
serde_json = "1.0.103"