[package]
name = "purplelight_core"
version = "0.1.0"
edition = "2021"
authors = ["hydroper <matheusdiasdesouzads@gmail.com>"]
repository = "https://github.com/purplelight-tech/purplelight"
license = "MIT OR Apache-2.0"
description = "Purplelight API"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
purplelight_lang = { path = "../purplelight_lang" }
bevy = "0.11.2"